--- a/chat-starter-code/chat-starter-code/public/index.html
+++ b/chat-starter-code/chat-starter-code/public/index.html
@@ -74,7 +74,9 @@
 
       // TODO:
       // Exercise 5: Respond to connections by defining the .onopen event handler.
-
+      wsClient.onopen = () => {
+        console.log('Connected to the websocket server!');
+      }
 
       // TODO:
       // Exercise 7: Respond to messages from the servery by defining the .onmessage event handler
