--- a/chat-starter-code/chat-starter-code/public/index.html
+++ b/chat-starter-code/chat-starter-code/public/index.html
@@ -111,6 +111,9 @@
       
       // TODO: 
       // Exercise 6: Send the message from the messageBox to the server
+      // Client
+      wsClient.send(message);
+
       // Exercise 9: Send the message in a custom message object with .type and .payload properties
     }
 
