--- a/chat-starter-code/chat-starter-code/public/index.html
+++ b/chat-starter-code/chat-starter-code/public/index.html
@@ -76,13 +76,28 @@
       // Exercise 5: Respond to connections by defining the .onopen event handler.
       wsClient.onopen = () => {
         console.log('Connected to the websocket server!');
+        const data = {
+          type: 'NEW_USER'
+        }
+        wsClient.send(JSON.stringify(data));
       }
 
       // TODO:
       // Exercise 7: Respond to messages from the servery by defining the .onmessage event handler
       wsClient.onmessage = (messageEvent) => {
         const message = messageEvent.data;
-        showMessageReceived(message);
+        //showMessageReceived(message);
+        const { type, payload } = JSON.parse(message);
+        switch(type) {
+          case 'NEW_USER':
+            showMessageReceived('<em>New user has joined!</em>');
+            break;
+          case 'NEW_MESSAGE':
+            showMessageReceived(payload.message);
+            break;
+          default:
+            break;
+        }
       }
       // Exercise 9: Parse custom message types, formatting each message based on the type.
 
@@ -116,9 +131,14 @@
       // TODO: 
       // Exercise 6: Send the message from the messageBox to the server
       // Client
-      wsClient.send(message);
+      const data = {
+        type: 'NEW_MESSAGE',
+        payload: { message: message }
+      }
+      wsClient.send(JSON.stringify(data));
 
       // Exercise 9: Send the message in a custom message object with .type and .payload properties
+
     }
 
     ////////////////////////////////////////////////
