--- a/chat-starter-code/chat-starter-code/public/index.html
+++ b/chat-starter-code/chat-starter-code/public/index.html
@@ -28,6 +28,7 @@
     // This variable will hold the WebSocket client connection. 
     // Initialize in the init() function
     let wsClient; 
+    const username = prompt('enter a username');
     
     ////////////////////////////////////////////////
     //////////////// DOM SETUP /////////////////////
@@ -77,7 +78,8 @@
       wsClient.onopen = () => {
         console.log('Connected to the websocket server!');
         const data = {
-          type: 'NEW_USER'
+          type: 'NEW_USER',
+          payload: { username }
         }
         wsClient.send(JSON.stringify(data));
       }
@@ -90,7 +92,7 @@
         const { type, payload } = JSON.parse(message);
         switch(type) {
           case 'NEW_USER':
-            showMessageReceived('<em>New user has joined!</em>');
+            showMessageReceived('<em>' + payload.username + 'has joined!</em>');
             break;
           case 'NEW_MESSAGE':
             showMessageReceived(payload.message);
